--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": ">=5.0.0",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.4",
